# wasm_chess

./: Cargo.toml  README.md  build.sh  run.sh
.github/workflows/: static.yml
src/: board.rs  game.rs  lib.rs  piece.rs  world.rs
src/engine/: canvas_handler.rs  js.rs  mod.rs
src/test/: piece_test.rs
www/: chess.css  index.html  main.js
